# tvdb-ep-list

./: .pre-commit-config.yaml  CHANGELOG.MD  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
src/: api.rs  main.rs
