[package]
authors = ["Bennett Buckley <ben.buckley@outlook.com>"]
description = "A command-line application for generating TV episode file names"
edition = "2021"
exclude = ["/.github", "/.vscode", ".pre-commit-config.yaml"]
homepage = "https://github.com/bladepoint6969/tvdb-ep-list"
keywords = ["tvdb"]
license = "MIT OR Apache-2.0"
name = "tvdb-ep-list"
repository = "https://github.com/bladepoint6969/tvdb-ep-list"
rust-version = "1.74.1"
version = "0.4.10"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1"
clap = { version = "4", features = ["derive"] }
confy = "0.6"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros"] }
url = "2"

[package.metadata.release]
tag-message = "chore(release): Release {{crate_name}} version {{version}}"
pre-release-commit-message = "chore(release): Release {{crate_name}} version {{version}}"
pre-release-hook = [
    "git", "cliff", "-o", "CHANGELOG.MD", "--tag", "{{version}}"
]
